[gd_scene load_steps=8 format=3 uid="uid://m1toiypevw0k"]

[ext_resource type="Script" path="res://Rooms/Room.gd" id="1_mo01v"]
[ext_resource type="TileSet" uid="uid://dx7b0qj1j83uy" path="res://Rooms/Dungeon.tres" id="2_0uryy"]
[ext_resource type="Texture2D" uid="uid://bs4at1b7gvkgj" path="res://Art/o_lobster/tiles/floor/stair_nextlevel.png" id="3_4vyg1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bcwb3"]
size = Vector2(16, 16)

[sub_resource type="Animation" id="Animation_2ubuk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_xnygb"]
resource_name = "enable"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_prcxc"]
_data = {
"RESET": SubResource("Animation_2ubuk"),
"enable": SubResource("Animation_xnygb")
}

[node name="Room" type="Node2D"]
z_index = 1
script = ExtResource("1_mo01v")

[node name="Map" type="TileMap" parent="."]
tile_set = ExtResource("2_0uryy")
format = 2
layer_0/tile_data = PackedInt32Array(196614, 196608, 1, 262150, 196608, 1, 262149, 131072, 2, 131074, 196608, 1, 196610, 196608, 1, 262146, 262144, 2, 3, 327680, 2, 0, 327680, 2, 65536, 458752, 4, 131072, 458752, 4, 196608, 458752, 4, 262144, 458752, 4, 327680, 458752, 4, 393216, 458752, 4, 458752, 458752, 4, 524288, 458752, 4, 589824, 458752, 4, 655360, 458752, 4, 720896, 458752, 4, 786432, 458752, 4, 851968, 458752, 4, 917504, 458752, 4, 983040, 458752, 4, 1, 327680, 2, 65537, 458752, 4, 131073, 262144, 3, 196609, 196608, 1, 262145, 196608, 1, 327681, 196608, 1, 393217, 196608, 1, 458753, 196608, 1, 524289, 196608, 1, 589825, 196608, 1, 655361, 262144, 3, 720897, 196608, 1, 786433, 196608, 1, 851969, 196608, 1, 917505, 196608, 1, 983041, 131072, 2, 1048577, 458752, 4, 2, 327680, 2, 983042, 262144, 3, 1048578, 458752, 4, 131075, 131072, 1, 196611, 196608, 1, 262147, 196608, 1, 327683, 196608, 1, 393219, 262144, 2, 458755, 196608, 1, 524291, 196608, 1, 589827, 196608, 1, 655363, 196608, 1, 720899, 196608, 1, 786435, 196608, 1, 851971, 196608, 1, 917507, 196608, 1, 983043, 196608, 1, 1048579, 458752, 4, 4, 327680, 2, 131076, 196608, 1, 196612, 196608, 1, 262148, 196608, 1, 327684, 196608, 1, 393220, 196608, 1, 458756, 131072, 2, 524292, 196608, 1, 589828, 196608, 1, 655364, 196608, 1, 720900, 196608, 1, 786436, 131072, 1, 851972, 196608, 1, 917508, 196608, 1, 983044, 196608, 1, 1048580, 458752, 4, 5, 327680, 2, 131077, 262144, 3, 196613, 196608, 1, 327685, 262144, 3, 393221, 196608, 1, 458757, 196608, 1, 524293, 196608, 1, 589829, 196608, 1, 655365, 131072, 1, 720901, 196608, 1, 786437, 196608, 1, 851973, 262144, 2, 917509, 196608, 1, 983045, 196608, 1, 1048581, 458752, 4, 6, 327680, 2, 131078, 196608, 1, 327686, 196608, 1, 393222, 196608, 1, 458758, 131072, 1, 524294, 262144, 3, 589830, 131072, 2, 655366, 262144, 3, 720902, 196608, 1, 786438, 131072, 1, 851974, 196608, 1, 917510, 131072, 1, 983046, 196608, 1, 1048582, 458752, 4, 7, 327680, 2, 131079, 196608, 1, 196615, 196608, 1, 262151, 196608, 1, 327687, 196608, 1, 393223, 262144, 2, 458759, 196608, 1, 524295, 196608, 1, 589831, 196608, 1, 655367, 196608, 1, 720903, 196608, 1, 786439, 131072, 2, 851975, 196608, 1, 917511, 196608, 1, 983047, 196608, 1, 1048583, 458752, 4, 8, 327680, 2, 131080, 196608, 1, 196616, 131072, 1, 262152, 131072, 2, 327688, 196608, 1, 393224, 196608, 1, 458760, 196608, 1, 524296, 196608, 1, 589832, 131072, 1, 655368, 262144, 2, 720904, 196608, 1, 786440, 196608, 1, 851976, 196608, 1, 917512, 196608, 1, 983048, 262144, 3, 1048584, 458752, 4, 9, 327680, 2, 131081, 196608, 1, 196617, 196608, 1, 262153, 196608, 1, 327689, 196608, 1, 393225, 196608, 1, 458761, 196608, 1, 524297, 131072, 2, 589833, 196608, 1, 655369, 262144, 3, 720905, 196608, 1, 786441, 196608, 1, 851977, 262144, 3, 917513, 196608, 1, 983049, 196608, 1, 1048585, 458752, 4, 10, 327680, 2, 131082, 196608, 1, 196618, 196608, 1, 262154, 262144, 3, 327690, 196608, 1, 393226, 131072, 1, 458762, 196608, 1, 524298, 196608, 1, 589834, 196608, 1, 655370, 196608, 1, 720906, 196608, 1, 786442, 131072, 1, 851978, 196608, 1, 917514, 196608, 1, 983050, 196608, 1, 1048586, 458752, 4, 11, 327680, 2, 131083, 262144, 3, 196619, 196608, 1, 262155, 196608, 1, 327691, 196608, 1, 393227, 196608, 1, 458763, 196608, 1, 524299, 196608, 1, 589835, 196608, 1, 655371, 131072, 1, 720907, 196608, 1, 786443, 196608, 1, 851979, 196608, 1, 917515, 196608, 1, 983051, 131072, 2, 1048587, 458752, 4, 12, 327680, 2, 131084, 196608, 1, 196620, 131072, 1, 262156, 196608, 1, 327692, 196608, 1, 393228, 196608, 1, 458764, 196608, 1, 524300, 131072, 2, 589836, 196608, 1, 655372, 196608, 1, 720908, 196608, 1, 786444, 196608, 1, 851980, 262144, 3, 917516, 196608, 1, 983052, 196608, 1, 1048588, 458752, 4, 13, 327680, 2, 131085, 196608, 1, 196621, 196608, 1, 262157, 196608, 1, 327693, 196608, 1, 393229, 262144, 2, 458765, 327680, 1, 524301, 327680, 1, 589837, 131072, 1, 655373, 196608, 1, 720909, 196608, 1, 786445, 196608, 1, 851981, 196608, 1, 917517, 196608, 1, 983053, 196608, 1, 1048589, 458752, 4, 14, 327680, 2, 131086, 196608, 1, 196622, 262144, 2, 262158, 196608, 1, 327694, 196608, 1, 393230, 196608, 1, 458766, 327680, 1, 524302, 327680, 1, 589838, 196608, 1, 655374, 196608, 1, 720910, 196608, 1, 786446, 131072, 1, 851982, 196608, 1, 917518, 196608, 1, 983054, 196608, 1, 1048590, 458752, 4, 15, 327680, 2, 131087, 196608, 1, 196623, 196608, 1, 262159, 196608, 1, 327695, 196608, 1, 393231, 131072, 1, 458767, 196608, 1, 524303, 196608, 3, 589839, 196608, 1, 655375, 196608, 1, 720911, 196608, 1, 786447, 196608, 1, 851983, 196608, 1, 917519, 131072, 1, 983055, 196608, 1, 1048591, 458752, 4, 16, 327680, 2, 131088, 131072, 1, 196624, 196608, 1, 262160, 196608, 1, 327696, 196608, 1, 393232, 196608, 1, 458768, 196608, 1, 524304, 196608, 1, 589840, 196608, 1, 655376, 131072, 1, 720912, 196608, 1, 786448, 196608, 1, 851984, 196608, 1, 917520, 196608, 1, 983056, 196608, 1, 1048592, 458752, 4, 17, 327680, 2, 131089, 196608, 1, 196625, 196608, 1, 262161, 196608, 1, 327697, 196608, 1, 393233, 196608, 1, 458769, 196608, 3, 524305, 262144, 2, 589841, 196608, 1, 655377, 196608, 3, 720913, 196608, 1, 786449, 196608, 1, 851985, 196608, 1, 917521, 262144, 2, 983057, 196608, 1, 1048593, 458752, 4, 18, 327680, 2, 131090, 196608, 1, 196626, 196608, 1, 262162, 131072, 2, 327698, 196608, 1, 393234, 196608, 1, 458770, 196608, 1, 524306, 196608, 1, 589842, 196608, 1, 655378, 196608, 1, 720914, 196608, 1, 786450, 131072, 2, 851986, 262144, 3, 917522, 196608, 1, 983058, 196608, 1, 1048594, 458752, 4, 19, 327680, 2, 131091, 196608, 1, 196627, 196608, 1, 262163, 131072, 1, 327699, 196608, 1, 393235, 131072, 1, 458771, 196608, 1, 524307, 131072, 1, 589843, 196608, 1, 655379, 196608, 1, 720915, 196608, 1, 786451, 196608, 1, 851987, 196608, 1, 917523, 196608, 1, 983059, 196608, 1, 1048595, 458752, 4, 20, 327680, 2, 131092, 196608, 1, 196628, 262144, 2, 262164, 196608, 1, 327700, 262144, 2, 393236, 196608, 1, 458772, 196608, 3, 524308, 196608, 1, 589844, 196608, 1, 655380, 262144, 2, 720916, 196608, 1, 786452, 196608, 1, 851988, 196608, 1, 917524, 196608, 1, 983060, 196608, 1, 1048596, 458752, 4, 21, 327680, 2, 131093, 196608, 1, 196629, 196608, 1, 262165, 196608, 1, 327701, 196608, 1, 393237, 196608, 1, 458773, 196608, 1, 524309, 196608, 1, 589845, 196608, 1, 655381, 196608, 1, 720917, 196608, 1, 786453, 196608, 1, 851989, 131072, 2, 917525, 196608, 1, 983061, 196608, 1, 1048597, 458752, 4, 22, 327680, 2, 131094, 196608, 1, 196630, 196608, 1, 262166, 262144, 3, 327702, 196608, 1, 393238, 196608, 1, 458774, 196608, 1, 524310, 131072, 2, 589846, 262144, 2, 655382, 131072, 1, 720918, 196608, 1, 786454, 196608, 1, 851990, 196608, 1, 917526, 196608, 1, 983062, 131072, 1, 1048598, 458752, 4, 23, 327680, 2, 131095, 131072, 1, 196631, 196608, 1, 262167, 196608, 1, 327703, 131072, 1, 393239, 196608, 1, 458775, 196608, 1, 524311, 196608, 1, 589847, 196608, 1, 655383, 196608, 1, 720919, 196608, 1, 786455, 196608, 1, 851991, 196608, 1, 917527, 196608, 1, 983063, 196608, 1, 1048599, 458752, 4, 24, 327680, 2, 131096, 196608, 1, 196632, 196608, 1, 262168, 196608, 1, 327704, 196608, 1, 393240, 196608, 1, 458776, 196608, 1, 524312, 196608, 1, 589848, 196608, 1, 655384, 196608, 1, 720920, 262144, 3, 786456, 262144, 2, 851992, 196608, 1, 917528, 196608, 1, 983064, 196608, 1, 1048600, 458752, 4, 25, 327680, 2, 131097, 196608, 1, 196633, 196608, 1, 262169, 196608, 1, 327705, 196608, 1, 393241, 196608, 1, 458777, 196608, 1, 524313, 196608, 1, 589849, 196608, 1, 655385, 196608, 1, 720921, 196608, 1, 786457, 196608, 1, 851993, 196608, 1, 917529, 196608, 1, 983065, 196608, 1, 1048601, 458752, 4, 26, 327680, 2, 131098, 262144, 3, 196634, 196608, 1, 262170, 131072, 2, 327706, 196608, 1, 393242, 196608, 1, 458778, 196608, 1, 524314, 196608, 1, 589850, 196608, 1, 655386, 196608, 1, 720922, 196608, 1, 786458, 131072, 2, 851994, 196608, 1, 917530, 196608, 1, 983066, 196608, 1, 1048602, 458752, 4, 27, 327680, 2, 589851, 196608, 1, 655387, 196608, 1, 720923, 196608, 1, 786459, 196608, 1, 851995, 196608, 1, 917531, 131072, 1, 983067, 196608, 1, 1048603, 458752, 4, 28, 327680, 2, 131100, 131072, 1, 196636, 196608, 1, 262172, 196608, 1, 327708, 196608, 1, 393244, 196608, 1, 458780, 196608, 1, 524316, 196608, 1, 589852, 196608, 1, 655388, 262144, 3, 720924, 196608, 1, 786460, 196608, 1, 851996, 196608, 1, 917532, 196608, 1, 983068, 196608, 1, 1048604, 458752, 4, 29, 327680, 2, 65565, 458752, 4, 131101, 458752, 4, 196637, 458752, 4, 262173, 458752, 4, 327709, 458752, 4, 393245, 458752, 4, 458781, 458752, 4, 524317, 458752, 4, 589853, 458752, 4, 655389, 458752, 4, 720925, 458752, 4, 786461, 458752, 4, 851997, 458752, 4, 917533, 458752, 4, 983069, 458752, 4, 1048605, 458752, 4, 327682, 196608, 1, 393218, 196608, 1, 458754, 196608, 1, 524290, 196608, 1, 589826, 196608, 1, 655362, 196608, 1, 720898, 196608, 1, 786434, 196608, 1, 851970, 196608, 1, 917506, 196608, 1, 65538, 393216, 4, 65539, 393216, 4, 65540, 393216, 4, 65541, 393216, 5, 65542, 393216, 4, 65543, 393216, 4, 65544, 524288, 5, 65545, 393216, 4, 65546, 393216, 4, 65547, 393216, 4, 65548, 393216, 4, 65549, 393216, 4, 65550, 393216, 4, 65551, 393216, 4, 65552, 393216, 5, 65553, 393216, 4, 65554, 393216, 4, 65555, 393216, 4, 65556, 458752, 5, 65557, 393216, 5, 65558, 393216, 4, 65559, 393216, 4, 65560, 393216, 4, 65561, 393216, 4, 65562, 393216, 4, 65563, 393216, 4, 65564, 393216, 4, 131099, 196608, 1, 196635, 196608, 1, 262171, 196608, 1, 327707, 196608, 1, 393243, 196608, 1, 458779, 196608, 1, 524315, 196608, 1)

[node name="EnemySpawnPositions" type="Node" parent="Map"]

[node name="Position" type="Node2D" parent="Map/EnemySpawnPositions"]
position = Vector2(405, 69)

[node name="Position2" type="Node2D" parent="Map/EnemySpawnPositions"]
position = Vector2(155, 177)

[node name="Position3" type="Node2D" parent="Map/EnemySpawnPositions"]
position = Vector2(408, 209)

[node name="PlayerSpawnPosition" type="Node2D" parent="Map"]
position = Vector2(91, 77)

[node name="Exit" type="Area2D" parent="Map"]
position = Vector2(384, 128)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/Exit"]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_bcwb3")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="Map/Exit"]
visible = false
position = Vector2(8, 8)
texture = ExtResource("3_4vyg1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Map/Exit"]
libraries = {
"": SubResource("AnimationLibrary_prcxc")
}

[node name="Overlay" type="TileMap" parent="."]
z_index = 3
tile_set = ExtResource("2_0uryy")
format = 2
layer_0/tile_data = PackedInt32Array(3, 327680, 6, 0, 327680, 3, 65536, 327680, 3, 131072, 327680, 3, 196608, 327680, 3, 262144, 327680, 3, 327680, 327680, 3, 393216, 327680, 3, 458752, 327680, 3, 524288, 327680, 3, 589824, 327680, 3, 655360, 327680, 3, 720896, 327680, 3, 786432, 327680, 3, 851968, 327680, 3, 917504, 327680, 3, 983040, 327680, 3, 1048576, 327680, 3, 1, 327680, 6, 65537, 196608, 5, 131073, 196608, 5, 196609, 196608, 5, 262145, 196608, 5, 327681, 196608, 5, 393217, 196608, 5, 458753, 196608, 5, 524289, 196608, 5, 589825, 196608, 5, 655361, 196608, 5, 720897, 196608, 5, 786433, 196608, 5, 851969, 196608, 5, 917505, 196608, 5, 983041, 65536, 7, 1048577, 327680, 3, 2, 327680, 6, 983042, 131072, 7, 1048578, 327680, 3, 983043, 131072, 7, 1048579, 327680, 3, 4, 327680, 6, 983044, 131072, 7, 1048580, 327680, 3, 5, 327680, 6, 983045, 131072, 7, 1048581, 327680, 3, 6, 327680, 6, 983046, 131072, 7, 1048582, 327680, 3, 7, 327680, 6, 983047, 131072, 7, 1048583, 327680, 3, 8, 327680, 6, 983048, 131072, 7, 1048584, 327680, 3, 9, 327680, 6, 983049, 131072, 7, 1048585, 327680, 3, 10, 327680, 6, 983050, 131072, 7, 1048586, 327680, 3, 11, 327680, 6, 983051, 131072, 7, 1048587, 327680, 3, 12, 327680, 6, 983052, 131072, 7, 1048588, 327680, 3, 13, 327680, 6, 983053, 131072, 7, 1048589, 327680, 3, 14, 327680, 6, 983054, 131072, 7, 1048590, 327680, 3, 15, 327680, 6, 983055, 131072, 7, 1048591, 327680, 3, 16, 327680, 6, 983056, 131072, 7, 1048592, 327680, 3, 17, 327680, 6, 983057, 131072, 7, 1048593, 327680, 3, 18, 327680, 6, 983058, 131072, 7, 1048594, 327680, 3, 19, 327680, 6, 983059, 131072, 7, 1048595, 327680, 3, 20, 327680, 6, 983060, 131072, 7, 1048596, 327680, 3, 21, 327680, 6, 983061, 131072, 7, 1048597, 327680, 3, 22, 327680, 6, 983062, 131072, 7, 1048598, 327680, 3, 23, 327680, 6, 983063, 131072, 7, 1048599, 327680, 3, 24, 327680, 6, 983064, 131072, 7, 1048600, 327680, 3, 25, 327680, 6, 983065, 131072, 7, 1048601, 327680, 3, 26, 327680, 6, 983066, 131072, 7, 1048602, 327680, 3, 27, 327680, 6, 983067, 131072, 7, 1048603, 327680, 3, 28, 327680, 6, 65564, 262144, 5, 131100, 262144, 5, 196636, 262144, 5, 262172, 262144, 5, 327708, 262144, 5, 393244, 262144, 5, 458780, 262144, 5, 524316, 262144, 5, 589852, 262144, 5, 655388, 262144, 5, 720924, 262144, 5, 786460, 262144, 5, 851996, 262144, 5, 917532, 262144, 5, 983068, 327680, 7, 1048604, 327680, 3, 29, 327680, 3, 65565, 327680, 3, 131101, 327680, 3, 196637, 327680, 3, 262173, 327680, 3, 327709, 327680, 3, 393245, 327680, 3, 458781, 327680, 3, 524317, 327680, 3, 589853, 327680, 3, 655389, 327680, 3, 720925, 327680, 3, 786461, 327680, 3, 851997, 327680, 3, 917533, 327680, 3, 983069, 327680, 3, 1048605, 327680, 3)

[connection signal="body_entered" from="Map/Exit" to="." method="_on_exit_body_entered"]
